--- a/.github/workflows/anac-rss.yml
+++ b/.github/workflows/anac-rss.yml
@@ -21,37 +21,43 @@ jobs:
         run: |
           cat << 'EOF' > script.ts
           import { Feed } from "https://esm.sh/feed@4.2.2";
+          import { DOMParser } from "https://deno.land/x/deno_dom@v0.1.45/deno-dom-wasm.ts";
 
           const ANAC_URL = "https://www.gov.br/anac/pt-br/noticias";
 
           async function generateFeeds() {
             try {
               // 1. Fetch HTML
+              console.log("⏳ Buscando HTML...");
               const response = await fetch(ANAC_URL);
               const html = await response.text();
               
-              // 2. Parse HTML usando DOMParser nativo
+              // 2. Parse HTML usando deno-dom
+              console.log("🔍 Analisando HTML...");
               const doc = new DOMParser().parseFromString(html, "text/html");
               if (!doc) throw new Error("Falha ao parsear HTML");
 
               // 3. Extract news items
+              console.log("📦 Extraindo notícias...");
               const newsItems = Array.from(doc.querySelectorAll("article.tileItem"))
                 .slice(0, 20)
                 .map((article) => {
                   const titleElem = article.querySelector("h2.tileHeadline a");
-                  const link = titleElem?.getAttribute("href")?.startsWith("http") 
-                    ? titleElem.getAttribute("href") 
-                    : `${ANAC_URL}${titleElem?.getAttribute("href") || ""}`;
+                  const relativeLink = titleElem?.getAttribute("href") || "";
+                  const link = relativeLink.startsWith("http") 
+                    ? relativeLink 
+                    : `${ANAC_URL}${relativeLink}`;
                   
                   return {
                     title: titleElem?.textContent?.trim() || "Sem título",
-                    link: link || ANAC_URL,
+                    link: link,
                     description: article.querySelector("p.tileBody span.description")?.textContent?.trim() || "",
-                    date: new Date().toISOString() // Adapte conforme necessário
+                    date: new Date().toISOString()
                   };
                 });
 
               // 4. Generate JSON
+              console.log("📝 Gerando JSON...");
               await Deno.writeTextFile(
                 "anac-news.json",
                 JSON.stringify({
@@ -63,6 +69,7 @@ jobs:
               );
 
               // 5. Generate RSS
+              console.log("📡 Gerando RSS...");
               const feed = new Feed({
                 title: "ANAC Notícias",
                 description: "Feed RSS das notícias da Agência Nacional de Aviação Civil",
@@ -91,10 +98,13 @@ jobs:
             }
           }
 
+          // Inicializa deno-dom e executa
+          console.log("🔄 Inicializando parser HTML...");
+          const { document, Node, HTMLElement } = await import("https://deno.land/x/deno_dom@v0.1.45/src/dom.ts");
           await generateFeeds();
           EOF
 
-          deno run --allow-net --allow-read --allow-write script.ts
+          deno run --allow-net --allow-read --allow-write --unstable script.ts
 
       - name: Upload artifacts
         uses: actions/upload-artifact@v4
@@ -115,3 +125,4 @@ jobs:
           git add feeds/
           git commit -m "📌 Atualização automática dos feeds [$(date +'%d/%m/%Y %H:%M')]" || echo "Nenhuma alteração para commitar"
           git push
+        
